@startuml
skinparam classAttributeIconSize 0

' === FEATURE SERVICES PACKAGE ===
package "Feature Services / Coloring / Static" {
    class FeatureColoringService {
        + show_feature_coloring(feature: Feature): void
        + stop_feature_coloring(feature: Feature): void
    }

    package "Color Strategies" {
        interface IRangeColorStrategy {
            + __init__(workbook: Workbook): void
            + convert(cell_range: CellRange): str
        }
        class DependentsHeatmap
        class RootNodeColoring

        DependentsHeatmap .up.|> IRangeColorStrategy
        RootNodeColoring .up.|> IRangeColorStrategy
        FeatureColoringService --> IRangeColorStrategy
    }
}

' === ADAPTERS ===
package "Adapters" {}
' === CORE SERVICES ===
package "Core Services"{}

' === DEPENDENCIES ===
FeatureColoringService --> "Core Services"
FeatureColoringService --> "Adapters"

@enduml
